# MASS-TDL

./: .clang-format  .clang-tidy  .clang-tidy.m8  .clang-tidy.path-s  .gitignore  .gitlab-ci.yml  .gitmodules  .ruff.toml  CLAUDE.md  D1.3b.3-DoD-CHECKLIST.md  README.md  conftest.py  cppcheck-misra-cpp-2023.cfg  docker-compose.yml  migration_log.json  pyproject.toml  pytest.ini
archive/sil_v0/l3_external_mock_publisher/: package.xml
archive/sil_v0/l3_external_mock_publisher/l3_external_mock_publisher/: external_mock_publisher.py
src/ais_bridge/: package.xml  setup.py
src/ais_bridge/ais_bridge/: dataset_loader.py  nmea_decoder.py  replay_node.py  target_publisher.py
src/ais_bridge/scripts/: download_dataset.py
src/ais_bridge/test/: test_parse_rate.py
src/fcb_simulator/: CMakeLists.txt  package.xml  plugins.xml
src/fcb_simulator/config/: fcb_dynamics.yaml
src/fcb_simulator/launch/: simulator.launch.py
src/fcb_simulator/src/: fcb_simulator_node.cpp  mmg_model.cpp  rk4_integrator.cpp  scenario_runner.cpp
src/fcb_simulator/test/: test_rk4_energy.cpp  test_scenario_runner.cpp  test_stability_1h.cpp
src/l3_external_msgs/: CMakeLists.txt  package.xml
src/l3_external_msgs/msg/: CheckerVetoNotification.msg  EmergencyCommand.msg  EnvironmentState.msg  FilteredOwnShipState.msg  OverrideActiveSignal.msg  PlannedRoute.msg  ReflexActivationNotification.msg  ReplanResponse.msg  SpeedProfile.msg  TrackedTargetArray.msg  VoyageTask.msg
src/l3_external_msgs/python/: setup.py
src/l3_msgs/: CMakeLists.txt  package.xml
src/l3_msgs/msg/: ASDRRecord.msg  AvoidancePlan.msg  AvoidanceWaypoint.msg  BehaviorPlan.msg  COLREGsConstraint.msg  Constraint.msg  MissionGoal.msg  ModeCmd.msg  ODDState.msg  OwnShipState.msg  ReactiveOverrideCmd.msg  RouteReplanRequest.msg  SAT1Data.msg  SAT2Data.msg  SAT3Data.msg  SATData.msg  SafetyAlert.msg  SpeedSegment.msg  TimeWindow.msg  ToRRequest.msg  TrackedTarget.msg  UIState.msg  WorldState.msg  ZoneConstraint.msg
src/l3_tdl_kernel/l3_external_mock_publisher/: package.xml  setup.py
src/l3_tdl_kernel/l3_external_msgs/: CMakeLists.txt  package.xml
src/l3_tdl_kernel/l3_msgs/: CMakeLists.txt
src/l3_tdl_kernel/m1_odd_envelope_manager/: CMakeLists.txt
src/l3_tdl_kernel/m4_behavior_arbiter/: CMakeLists.txt  README.md  package.xml
src/m1_odd_envelope_manager/: CMakeLists.txt  README.md  package.xml
src/m1_odd_envelope_manager/config/: m1_params.yaml
src/m1_odd_envelope_manager/src/: conformance_score_calculator.cpp  main.cpp  mrc_trigger_logic.cpp  odd_envelope_manager_node.cpp  odd_state_machine.cpp  parameter_loader.cpp  tmr_tdl_estimator.cpp
src/m1_odd_envelope_manager/test/: CMakeLists.txt  test_conformance_score.cpp  test_mrc_trigger_logic.cpp  test_odd_state_machine.cpp  test_tmr_tdl_estimator.cpp
src/m2_world_model/: CMakeLists.txt  README.md  package.xml
src/m2_world_model/config/: m2_params.yaml
src/m2_world_model/launch/: m2_world_model.launch.py
src/m2_world_model/src/: coord_transform.cpp  cpa_tcpa_calculator.cpp  encounter_classifier.cpp  error.cpp  main.cpp  track_buffer.cpp  view_health_monitor.cpp  world_model_node.cpp  world_state_aggregator.cpp
src/m2_world_model/test/: CMakeLists.txt  test_coord_transform.cpp  test_cpa_tcpa_calculator.cpp  test_encounter_classifier.cpp  test_track_buffer.cpp  test_world_state_aggregator.cpp
src/m3_mission_manager/: CMakeLists.txt  README.md  package.xml
src/m3_mission_manager/src/: error_codes.cpp  eta_projector.cpp  mission_manager_node.cpp  mission_state_machine.cpp  replan_request_trigger.cpp  replan_response_handler.cpp  voyage_task_validator.cpp
src/m3_mission_manager/test/: CMakeLists.txt  test_mission_state_machine.cpp  test_replan_request_trigger.cpp  test_replan_response_handler.cpp  test_voyage_task_validator.cpp
src/m5_tactical_planner/: CMakeLists.txt  README.md  fallback_policy.py  package.xml
src/m5_tactical_planner/config/: fcb_vessel_capability.yaml
src/m6_colregs_reasoner/: CMakeLists.txt  package.xml
src/m6_colregs_reasoner/config/: colregs_rule_library.yaml  odd_aware_thresholds.yaml
src/m6_colregs_reasoner/src/: colregs_constraint_generator.cpp  colregs_phase_classifier.cpp  colregs_reasoner_node.cpp  error_codes.cpp  geometry_utils.cpp  main.cpp  rule_library_loader.cpp  target_state_cache.cpp
src/m6_colregs_reasoner/test/: CMakeLists.txt  test_constraint_generator.cpp  test_phase_classifier.cpp  test_rule13_overtaking.cpp  test_rule14_head_on.cpp  test_rule15_crossing.cpp  test_rule16_give_way.cpp  test_rule19_restricted_visibility.cpp  test_rule6_safe_speed.cpp  test_rule7_risk_of_collision.cpp  test_rule8_action_to_avoid.cpp  test_rule_library_loader.cpp
src/m7_safety_supervisor/: CMakeLists.txt  package.xml
src/m7_safety_supervisor/src/: main.cpp  safety_supervisor_node.cpp
src/m8_hmi_transparency_bridge/: CMakeLists.txt  README.md
src/m8_hmi_transparency_bridge/python/: pyproject.toml
src/m8_hmi_transparency_bridge/src/: adaptive_sat_trigger.cpp  asdr_logger.cpp  hmi_transparency_bridge_node.cpp  main.cpp  module_health_monitor.cpp  sat_aggregator.cpp  sha256.cpp  tor_protocol.cpp  tor_request_generator.cpp  ui_state_builder.cpp
src/m8_hmi_transparency_bridge/test/: test_adaptive_sat_trigger.cpp  test_asdr_logger.cpp  test_hmi_transparency_bridge_node.cpp  test_module_health_monitor.cpp  test_sat_aggregator.cpp  test_tor_protocol.cpp  test_tor_request_generator.cpp  test_ui_state_builder.cpp
src/ship_sim_interfaces/: package.xml
src/sil_mock_publisher/: package.xml
src/sil_mock_publisher/launch/: sil_mock.launch.py
src/sil_mock_publisher/sil_mock_publisher/: sil_mock_node.py
tests/integration/: CMakeLists.txt  package.xml  test_cutover_parallel_run.py  test_int_001_m2_m6_m5_chain.cpp  test_int_002_m3_l2_replan.cpp  test_int_003_checker_veto.cpp  test_int_004_reflex_override.cpp  test_int_005_006_override_dual_interface.cpp  test_int_007_asdr_full.cpp  test_int_008_m8_sat_tor.cpp  test_int_009_m4_arbitration_chain.cpp  test_m4_node_lifecycle.cpp
tests/integration/python/: conftest.py  test_integration_smoke.py
(+1246 files in other folders)
