<?xml version="1.0"?>
<package format="3">
  <name>m1_odd_envelope_manager</name>
  <version>1.0.0</version>
  <description>M1 ODD/Envelope Manager — L3 scheduling authority</description>
  <maintainer email="team-m1@mass-l3-tdl.local">Team-M1</maintainer>
  <license>Proprietary</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>builtin_interfaces</depend>
  <depend>geometry_msgs</depend>
  <depend>geographic_msgs</depend>
  <depend>l3_msgs</depend>
  <depend>l3_external_msgs</depend>
  <depend>spdlog</depend>
  <depend>yaml-cpp</depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_cmake_clang_tidy</test_depend>
  <test_depend>ament_cmake_cppcheck</test_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
